crates/crane/src/snapshots/crane__compiler__tests__mixed_case_struct_name.snap
---
source: crates/crane/src/compiler.rs
expression: "&stderr"
---
Error: A type error occurred.
   ╭─[mixed_case.crane:1:2]
   │
 1 │ struct XMLHttpRequest {
   │        ───────┬──────  
   │               ╰──────── Struct names must be written in PascalCase.
   │               │        
   │               ╰──────── Try writing it as `XmlHttpRequest` instead.
───╯

